<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameSettingsActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/gameModeHeader"
            style="@style/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_mode" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/gameModeGroup"
            style="@style/customChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/classic"
                style="@style/customChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/classic"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tactile"
                style="@style/customChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/tactile"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.chip.Chip
                android:id="@+id/swipe"
                style="@style/customChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/swipe"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.chip.Chip
                android:id="@+id/kinetic"
                style="@style/customChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/kinetic"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.chip.Chip
                android:id="@+id/keyboard"
                style="@style/customChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/keyboard"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.chip.Chip
                android:id="@+id/revolution"
                style="@style/customChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/revolution"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/gameModeDescriptionHeader"
            style="@style/h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/header_placeholder"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/gameModeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_placeholder" />

        <Space
            style="@style/spacer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/difficultyHeader"
            style="@style/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficulty" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/difficultyGroup"
            style="@style/customChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/novice"
                style="@style/customChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/novice"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.chip.Chip
                android:id="@+id/intermediate"
                style="@style/customChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/intermediate"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.chip.Chip
                android:id="@+id/master"
                style="@style/customChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/master"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/difficultyDescriptionHeader"
            style="@style/h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_placeholder"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/difficultyDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                app:cornerRadius="@dimen/defaultCornerRadius"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>