<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rocknroll_one"
            android:text="@string/title"
            android:textColor="@color/magenta_light"
            android:textSize="64dp"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pt_mono"
            android:letterSpacing="0.3"
            android:text="@string/subtitle"
            android:textColor="@color/gold_light"
            android:textSize="28dp"
            tools:ignore="SpUsage,TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/empty_divider_50"
            android:gravity="center"
            android:orientation="vertical"
            android:showDividers="middle">

            <Button
                android:id="@+id/playButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                app:cornerRadius="@dimen/defaultCornerRadius"
                tools:ignore="TextContrastCheck" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play"
                app:cornerRadius="@dimen/defaultCornerRadius"
                tools:ignore="TextContrastCheck" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                app:cornerRadius="@dimen/defaultCornerRadius"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>